--- a/src/xsl/xrechnung-viewer.css
+++ b/src/xsl/xrechnung-viewer.css
@@ -59,6 +59,10 @@ h4
   padding: 0 2%;
 }
 
+.menue .innen div {
+  display: inline-block;
+  margin: 0 16px;
+}
 
 
 /* Formatierungen *************************************************/
